--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "aos": "^2.3.4",
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-gsap": "^1.2.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "sass": "^1.22.12"
