--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "aos": "^2.3.4",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "google-map-react": "^1.1.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-gsap": "^1.2.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "sass": "^1.22.12"
+    "sass": "^1.22.12",
+    "typescript": "^3.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
