--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react": "^16.9.2",
     "aos": "^2.3.4",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
