--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.3.1",
     "google-map-react": "^1.1.5",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-gsap": "^1.2.0",
     "react-icons": "^3.7.0",
