--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "sass": "^1.22.12",
+    "styled-components": "^4.4.0",
     "typescript": "^3.6.3"
   },
   "scripts": {
