--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "google-map-react": "^1.1.5",
+    "postscribe": "^2.0.8",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
+    "react-external-script-loader": "0.0.1",
     "react-gsap": "^1.2.0",
+    "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
     "react-router": "^5.1.0",
     "react-router-dom": "^5.0.1",
